--- a/knowledge/sports/roller_hockey/qna.yaml
+++ b/knowledge/sports/roller_hockey/qna.yaml
@@ -1,4 +1,4 @@
-created_by: 
+created_by: lepperr
 domain: sports
 seed_examples:
 - answer: Roller in-line hockey, American roller hockey or inline hockey, is a variant of hockey played on a hard, smooth surface, with players using inline skates to move and ice hockey sticks to shoot a hard, plastic puck into their opponent's goal to score points.|
