--- a/compositional_skills/linguistics/my_rhyme/qna.yaml
+++ b/compositional_skills/linguistics/my_rhyme/qna.yaml
@@ -13,7 +13,7 @@ seed_examples:
     5\. Yolk
 
     '
-  question: 'Give few rhyming words for cool.
+  question: 'Give few rhyming words for Joke.
 
     '
 - answer: 'Sure, I can help with that! Here''s one rhyming word for "pan":
