fixing with signoff
Signed-off-by: Bharathi Tenneti <btenneti@redhat.com>

--- a/knowledge/animals/indian_elephant/qna.yaml
+++ b/knowledge/animals/indian_elephant/qna.yaml
@@ -12,7 +12,7 @@ Since 1986, the Asian elephant has been listed as Endangered on the IUCN Red Lis
   question: Is Indian Elephant an endangered species?
 - answer: |
 What are the feeding habits of Indian Elephant?
-  question: Elephant is classified as a megaherbivore and can consume up to 150 kg (330 lb) of plant matter per day
+  question: Elephant is classified as a megaherbivore and can consume up to 150 kg (330 lb) of plant matter per day?
 - answer: |
 Indian elephant has a lifespan between 40 and 65 years with some animals reported to have lived for more than 75 years.
   question: What is the lifespan of Indian Elephant?
