--- a/.github/workflows/coc_violation_analysis.yml
+++ b/.github/workflows/coc_violation_analysis.yml
@@ -1,21 +1,39 @@
+# SPDX-License-Identifier: Apache-2.0
+
 name: CoC violation analysis
+
 run-name: Running CoC violation analysis
+
 on:
   workflow_run:
-    workflows: [Lint]
+    workflows:
+      - Lint
     types:
       - completed
+
+env:
+  LC_ALL: en_US.UTF-8
+
+defaults:
+  run:
+    shell: bash
+
+permissions:
+  contents: read
+
 jobs:
   annotator-insights:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     name: Run annotator insights
     steps:
-      - name: Invoke insight handler
+      - name: "Harden Runner"
+        uses: step-security/harden-runner@a4aa98b93cab29d9b1101a6143fb8bce00e2eac4 # v2.7.1
+        with:
+          egress-policy: audit # TODO: change to 'egress-policy: block' after couple of runs
+
+      - name: "Invoke insight handler"
         id: run_insights
         run: |
-          pull_request_number=$(jq --raw-output '.workflow_run.pull_requests[0].number' "$GITHUB_EVENT_PATH")
-          github_org=$(echo ${{ github.repository }} | cut -d "/" -f 1)
-          repo_name=$(echo ${{ github.repository }} | cut -d "/" -f 2)
-          curl -X 'POST' "https://pr-analysis-handler.1fuhf5gskmng.us-east.codeengine.appdomain.cloud/analyze-pr?pr_number=${pull_request_number}&owner=${github_org}&repo=${repo_name}" -H 'accept: application/json' -H 'Authorization: Bearer ${{ secrets.COC_ANALYSIS_TOKEN }}' -d '' &
+          curl -X 'POST' "https://pr-analysis-handler.1fuhf5gskmng.us-east.codeengine.appdomain.cloud/analyze-pr?pr_number=${{ github.event.workflow_run.pull_requests[0].number }}&owner=${{ github.event.organization }}&repo=${{ github.event.repository }}" -H 'accept: application/json' -H 'Authorization: Bearer ${{ secrets.COC_ANALYSIS_TOKEN }}' -d '' &
           echo "CoC violation analysis triggered"
