Add pull request number to workflow run-name
This will allow us to see which PR a specific workflow run was for.

Signed-off-by: BJ Hargrave <hargrave@us.ibm.com>

--- a/.github/workflows/coc_violation_analysis.yml
+++ b/.github/workflows/coc_violation_analysis.yml
@@ -2,7 +2,7 @@
 
 name: CoC violation analysis
 
-run-name: Running CoC violation analysis
+run-name: Running CoC violation analysis (#${{ github.event.workflow_run.pull_requests[0].number }})
 
 on:
   workflow_run:
