--- a/knowledge/science/botany/jasminum/qna.yaml
+++ b/knowledge/science/botany/jasminum/qna.yaml
@@ -1,4 +1,4 @@
-created_by:
+created_by: Samy Zemmouri
 domain: flowers
 seed_examples:
 - answer: The English common name of "Arabian jasmine", Jasminum sambac is due to it being widely cultivated in Southwest of Saudi Arabia, Yemen and Oman|
