Update qna.yaml - misspelling
Signed-off-by: deejamin <42647379+deejamin@users.noreply.github.com>
Signed-off-by: deejamin <deejam@gmail.com>

--- a/knowledge/science/botony/poison_ivy/qna.yaml
+++ b/knowledge/science/botony/poison_ivy/qna.yaml
@@ -11,7 +11,7 @@ seed_examples:
     Poison Ivy is most commonly considered a pest weed by humans?
   question: How is the Poison Ivy plan most commonly perceived by humans?
 - answer: |
-    Posion Ivy can grow as small plants, shrubs, or climbing vines. They are 
+    Poison Ivy can grow as small plants, shrubs, or climbing vines. They are 
     commonly characterized by clusters of leaves, each containing three leaflets, 
     hence the common expression "leaves of three, let it be".
   question: How does Poison Ivy grow?
